@@ -336,9 +336,6 @@ SCIP_RETCODE propagateCutoffbound(
       propdata->lastvarnum = v;
    }
 
-   /* check if we locally chanced bounds */
-   if( nchgbds > 0 )
-      *result = SCIP_REDUCEDDOM;
    
    /* check pseudo objective value of the root node */
    if( SCIPgetDepth(scip) == 0 && pseudoobjval > propdata->glbpseudoobjval )
@@ -369,6 +366,10 @@ SCIP_RETCODE propagateCutoffbound(
          propdata->glbpropagated = TRUE;
       }
    }
+
+   /* check if we chanced bounds */
+   if( nchgbds > 0 )
+      *result = SCIP_REDUCEDDOM;
 
    return SCIP_OKAY;
 }
@@ -978,6 +979,21 @@ SCIP_RETCODE SCIPincludePropPseudoobj(
          "propagating/pseudoobj/propcutoffbound", 
          "propagate new cutoff bound directly globally",
          &propdata->propcutoffbound, TRUE, DEFAULT_PROPCUTOFFBOUND, NULL, NULL) );
+
+   return SCIP_OKAY;
+}
+
+/** propagates the cutoff bound for the given variables */
+SCIP_RETCODE SCIPpropagateCutoffboundVar(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_PROP*            prop,               /**< propagator, or NULL */
+   SCIP_VAR*             var,                /**< variables to propagate */
+   SCIP_Real             cutoffbound,        /**< cutoff bound to use */
+   SCIP_Real             pseudoobjval,       /**< pseudo objective value to use */
+   int*                  nchgbds             /**< pointer to store the number of changed bounds */
+   )
+{
+   SCIP_CALL( propagateCutoffboundVar(scip, prop, var, cutoffbound, pseudoobjval, nchgbds, FALSE) );
 
    return SCIP_OKAY;
 }
